--- a/views/user/index-1.hbs
+++ b/views/user/index-1.hbs
@@ -15,7 +15,7 @@
             <div class="mb-3 mb-lg-5"></div><!-- End .mb-3 mb-lg-5 -->
 
             <div class="container">
-                <h2 class="title text-center mb-4">Explore Popular Brands</h2><!-- End .title text-center -->
+                <h2 class="title text-center mb-4">Explore Popular category</h2><!-- End .title text-center -->
                 
                 <div class="cat-blocks-container">
                     <div class="row">
