--- a/views/user/wishlist.hbs
+++ b/views/user/wishlist.hbs
@@ -52,7 +52,7 @@
 								</td>
 								<td class="price-col">₹{{this.product.price}}</td>
                                 {{!-- <td>{{this.deliveryDetails.address.HouseName}},{{this.deliveryDetails.address.streetName}},{{this.deliveryDetails.address.pincode}},{{this.deliveryDetails.address.state}} --}} 
-		                       <td class="price-col">₹{{this.product.storage}}</td>
+		                       <td class="price-col">{{this.product.storage}}</td>
                                 <td class="action-col">
 						        <div class="dropdown">
 							      <button class="btn btn-outline-dark" data-toggle="dropdown" aria-haspopup="true"
