--- a/views/user/userSignup.hbs
+++ b/views/user/userSignup.hbs
@@ -40,13 +40,13 @@
              <label class="form-check-label" for="inlineRadio2">Female</label>
           </div>
           <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="transgender" name="transgender" required>
+              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="transgender" name="transgender">
               <label class="form-check-label" for="inlineRadio3">Transgender</label>
           </div>
           <br>
           <button type="submit" class="btn mt-5" style="background-color:#800080;color: white;height:40px;">Create Account</button>
-           <button type="reset" class="btn btn-dark mt-5" style="height:40px;">clear</button>
-           <a type="button" class="btn btn-success mt-5" href="/" style="height:40px;">Back to Home</a>
+           {{!-- <button type="reset" class="btn btn-dark mt-5" style="height:40px;">clear</button>
+           <a type="button" class="btn btn-success mt-5" href="/" style="height:40px;">Back to Home</a> --}}
         </form>
         </div>
     </div>
@@ -139,7 +139,7 @@
     }
 
     function validation() {
-        if (!validateName() || !validEmail() || !validPassword() || !validcPassword() || validPhonenumber()) {
+        if (!validateName() || !validEmail() || !validPassword() || !validcPassword() || !validPhonenumber()) {
             return false
         }
         return true
