--- a/views/user/userSignup.hbs
+++ b/views/user/userSignup.hbs
@@ -45,8 +45,8 @@
           </div>
           <br>
           <button type="submit" class="btn mt-5" style="background-color:#800080;color: white;height:40px;">Create Account</button>
-           {{!-- <button type="reset" class="btn btn-dark mt-5" style="height:40px;">clear</button>
-           <a type="button" class="btn btn-success mt-5" href="/" style="height:40px;">Back to Home</a> --}}
+           <button type="reset" class="btn btn-dark mt-5" style="height:40px;">clear</button>
+           <a type="button" class="btn btn-success mt-5" href="/" style="height:40px;">Back to Home</a>
         </form>
         </div>
     </div>
