product id  query to params

--- a/views/user/category-list.hbs
+++ b/views/user/category-list.hbs
@@ -65,7 +65,7 @@
                                             <div class="product-body product-action-inner">
                                             
                                                 <h3 class="product-title"><a
-                                                        href="/product-view/?pId={{this._id}}">{{this.productname}}</a></h3>
+                                                        href="/product-view/{{this._id}}">{{this.productname}}</a></h3>
                                                 <!-- End .product-title -->
 
                                                 <div class="product-content">
