userlogout header update

--- a/views/partials/userLogoutHeader.hbs
+++ b/views/partials/userLogoutHeader.hbs
@@ -137,7 +137,7 @@
                             <ul class="menu sf-arrow ml-auto">
 
                                 <li class="megamenu-container active">
-                                    <a href=""  style="color: #800080;!important;">HOME</a>              
+                                    <a href="/"  style="color: #800080;!important;">HOME</a>              
                                 </li>
                                 <li class="megamenu-container active">
                                     <a href="/products" style="color: #800080;!important;">PRODUCTS</a>          
