--- a/views/user/add-address.hbs
+++ b/views/user/add-address.hbs
@@ -242,7 +242,7 @@
                                                 <tr>
                                                     <td><a href="#">{{this.product.productname}} ({{this.quantity}})</a>
                                                     </td>
-                                                    <td>{{this.total}}</td>
+                                                    <td>Rs.{{this.total}}</td>
                                                 </tr>
                                                 {{/each}}
                                                 {{!-- <tr>
@@ -251,7 +251,7 @@
                                                 </tr> --}}
                                                 <tr class="summary-subtotal">
                                                     <td>Subtotal:</td>
-                                                    <td>{{tot}}</td>
+                                                    <td>Rs.{{tot}}</td>
                                                 </tr><!-- End .summary-subtotal -->
                                                 <tr>
                                                     <td>Shipping:</td>
@@ -263,7 +263,7 @@
                                                 </tr>
                                                 <tr class="summary-total">
                                                     <td>Total:</td>
-                                                    <td>{{discountPrice}}</td>
+                                                    <td>Rs.{{discountPrice}}</td>
                                                 </tr><!-- End .summary-total -->
                                             </tbody>
                                         </table><!-- End .table table-summary -->
@@ -284,7 +284,7 @@
                                                 <tr>
                                                     <td><a href="#">{{this.product.productname}} ({{this.quantity}})</a>
                                                     </td>
-                                                    <td>{{this.total}}</td>
+                                                    <td>Rs.{{this.total}}</td>
                                                 </tr>
                                                 {{/each}}
                                                 {{!-- <tr>
@@ -293,7 +293,7 @@
                                                 </tr> --}}
                                                 <tr class="summary-subtotal">
                                                     <td>Subtotal:</td>
-                                                    <td>{{tot}}</td>
+                                                    <td>Rs.{{tot}}</td>
                                                 </tr><!-- End .summary-subtotal -->
                                                 <tr>
                                                     <td>Shipping:</td>
@@ -301,7 +301,7 @@
                                                 </tr>
                                                 <tr class="summary-total">
                                                     <td>Total:</td>
-                                                    <td>{{tot}}</td>
+                                                    <td>Rs.{{tot}}</td>
                                                 </tr><!-- End .summary-total -->
                                             </tbody>
                                         </table><!-- End .table table-summary -->
