--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -104,7 +104,7 @@
                                                 <tr>
                                                     <td><a href="#">{{this.product.productname}} ({{this.quantity}})</a>
                                                     </td>
-                                                    <td>{{this.total}}</td>
+                                                    <td>Rs.{{this.total}}</td>
                                                 </tr>
                                                 {{/each}}
                                                 {{!-- <tr>
@@ -115,7 +115,7 @@
                                                 {{#if discount}}
                                                 <tr class="summary-subtotal">
                                                     <td>Subtotal:</td>
-                                                    <td>{{tot}}</td>
+                                                    <td>Rs.{{tot}}</td>
                                                 </tr><!-- End .summary-subtotal -->
                                                 <tr>
                                                     <td>Shipping:</td>
@@ -127,13 +127,13 @@
                                                 </tr>
                                                 <tr class="summary-total">
                                                     <td>Total:</td>
-                                                    <td>{{discountPrice}}</td>
+                                                    <td>Rs.{{discountPrice}}</td>
                                                 </tr><!-- End .summary-total -->
 
                                                 {{else}}
                                                 <tr class="summary-subtotal">
                                                     <td>Subtotal:</td>
-                                                    <td>{{tot}}</td>
+                                                    <td>Rs.{{tot}}</td>
                                                 </tr><!-- End .summary-subtotal -->
                                                 <tr>
                                                     <td>Shipping:</td>
@@ -141,7 +141,7 @@
                                                 </tr>
                                                 <tr class="summary-total">
                                                     <td>Total:</td>
-                                                    <td>{{tot}}</td>
+                                                    <td>Rs.{{tot}}</td>
                                                 </tr><!-- End .summary-total -->
                                                 {{/if}}
                                             </tbody>
